src/noot/compiler/NootParser.java
// $ANTLR 3.5 /Users/Thijs/Development/noot/src/noot/compiler/Noot.g 2013-07-06 14:55:07

  package noot.compiler;
  import noot.ast.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class NootParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "APOSTROPHE", "BECOMES", 
		"BOOL", "CHAR", "CHARACTER", "COMMA", "COMMENT", "DEVIDE", "DIGIT", "DO", 
		"ELSE", "EQ", "FALSE", "FI", "IDENTIFIER", "IF", "INT", "LCURLY", "LESS", 
		"LESSEQ", "LETTER", "LOWER", "LPAREN", "MINUS", "MODULO", "MORE", "MOREEQ", 
		"MULTIPLY", "NEGATION", "NEQ", "NOOT", "NUMBER", "OD", "OR", "PLUS", "PRINT", 
		"RCURLY", "READ", "RPAREN", "SEMICOLON", "THEN", "TRUE", "UPPER", "WHILE", 
		"WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int APOSTROPHE=5;
	public static final int BECOMES=6;
	public static final int BOOL=7;
	public static final int CHAR=8;
	public static final int CHARACTER=9;
	public static final int COMMA=10;
	public static final int COMMENT=11;
	public static final int DEVIDE=12;
	public static final int DIGIT=13;
	public static final int DO=14;
	public static final int ELSE=15;
	public static final int EQ=16;
	public static final int FALSE=17;
	public static final int FI=18;
	public static final int IDENTIFIER=19;
	public static final int IF=20;
	public static final int INT=21;
	public static final int LCURLY=22;
	public static final int LESS=23;
	public static final int LESSEQ=24;
	public static final int LETTER=25;
	public static final int LOWER=26;
	public static final int LPAREN=27;
	public static final int MINUS=28;
	public static final int MODULO=29;
	public static final int MORE=30;
	public static final int MOREEQ=31;
	public static final int MULTIPLY=32;
	public static final int NEGATION=33;
	public static final int NEQ=34;
	public static final int NOOT=35;
	public static final int NUMBER=36;
	public static final int OD=37;
	public static final int OR=38;
	public static final int PLUS=39;
	public static final int PRINT=40;
	public static final int RCURLY=41;
	public static final int READ=42;
	public static final int RPAREN=43;
	public static final int SEMICOLON=44;
	public static final int THEN=45;
	public static final int TRUE=46;
	public static final int UPPER=47;
	public static final int WHILE=48;
	public static final int WS=49;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public NootParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public NootParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return NootParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/Thijs/Development/noot/src/noot/compiler/Noot.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:89:1: program : NOOT ^ ( command )+ EOF !;
	public final NootParser.program_return program() throws RecognitionException {
		NootParser.program_return retval = new NootParser.program_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token NOOT1=null;
		Token EOF3=null;
		ParserRuleReturnScope command2 =null;

		Node NOOT1_tree=null;
		Node EOF3_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:90:5: ( NOOT ^ ( command )+ EOF !)
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:90:7: NOOT ^ ( command )+ EOF !
			{
			root_0 = (Node)adaptor.nil();


			NOOT1=(Token)match(input,NOOT,FOLLOW_NOOT_in_program843); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			NOOT1_tree = (Node)adaptor.create(NOOT1);
			root_0 = (Node)adaptor.becomeRoot(NOOT1_tree, root_0);
			}

			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:90:13: ( command )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= BOOL && LA1_0 <= CHARACTER)||LA1_0==FALSE||(LA1_0 >= IDENTIFIER && LA1_0 <= LCURLY)||(LA1_0 >= LPAREN && LA1_0 <= MINUS)||LA1_0==NEGATION||LA1_0==NUMBER||LA1_0==PRINT||LA1_0==READ||LA1_0==TRUE||LA1_0==WHILE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:90:13: command
					{
					pushFollow(FOLLOW_command_in_program846);
					command2=command();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, command2.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_program849); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Node)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class command_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "command"
	// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:93:1: command : ( declaration SEMICOLON !| expression SEMICOLON !);
	public final NootParser.command_return command() throws RecognitionException {
		NootParser.command_return retval = new NootParser.command_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token SEMICOLON5=null;
		Token SEMICOLON7=null;
		ParserRuleReturnScope declaration4 =null;
		ParserRuleReturnScope expression6 =null;

		Node SEMICOLON5_tree=null;
		Node SEMICOLON7_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:94:5: ( declaration SEMICOLON !| expression SEMICOLON !)
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( ((LA2_0 >= BOOL && LA2_0 <= CHAR)||LA2_0==INT) ) {
				alt2=1;
			}
			else if ( (LA2_0==CHARACTER||LA2_0==FALSE||(LA2_0 >= IDENTIFIER && LA2_0 <= IF)||LA2_0==LCURLY||(LA2_0 >= LPAREN && LA2_0 <= MINUS)||LA2_0==NEGATION||LA2_0==NUMBER||LA2_0==PRINT||LA2_0==READ||LA2_0==TRUE||LA2_0==WHILE) ) {
				alt2=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:94:8: declaration SEMICOLON !
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_declaration_in_command872);
					declaration4=declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration4.getTree());

					SEMICOLON5=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_command874); if (state.failed) return retval;
					}
					break;
				case 2 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:95:8: expression SEMICOLON !
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_expression_in_command884);
					expression6=expression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, expression6.getTree());

					SEMICOLON7=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_command886); if (state.failed) return retval;
					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Node)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "command"


	public static class declaration_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:98:1: declaration : ( INT ^| CHAR ^| BOOL ^) IDENTIFIER declaration_extention ;
	public final NootParser.declaration_return declaration() throws RecognitionException {
		NootParser.declaration_return retval = new NootParser.declaration_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token INT8=null;
		Token CHAR9=null;
		Token BOOL10=null;
		Token IDENTIFIER11=null;
		ParserRuleReturnScope declaration_extention12 =null;

		Node INT8_tree=null;
		Node CHAR9_tree=null;
		Node BOOL10_tree=null;
		Node IDENTIFIER11_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:99:5: ( ( INT ^| CHAR ^| BOOL ^) IDENTIFIER declaration_extention )
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:99:9: ( INT ^| CHAR ^| BOOL ^) IDENTIFIER declaration_extention
			{
			root_0 = (Node)adaptor.nil();


			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:99:9: ( INT ^| CHAR ^| BOOL ^)
			int alt3=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt3=1;
				}
				break;
			case CHAR:
				{
				alt3=2;
				}
				break;
			case BOOL:
				{
				alt3=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:99:10: INT ^
					{
					INT8=(Token)match(input,INT,FOLLOW_INT_in_declaration911); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					INT8_tree = new DeclarationNode(INT8) ;
					root_0 = (Node)adaptor.becomeRoot(INT8_tree, root_0);
					}

					}
					break;
				case 2 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:99:34: CHAR ^
					{
					CHAR9=(Token)match(input,CHAR,FOLLOW_CHAR_in_declaration919); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					CHAR9_tree = new DeclarationNode(CHAR9) ;
					root_0 = (Node)adaptor.becomeRoot(CHAR9_tree, root_0);
					}

					}
					break;
				case 3 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:99:59: BOOL ^
					{
					BOOL10=(Token)match(input,BOOL,FOLLOW_BOOL_in_declaration927); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					BOOL10_tree = new DeclarationNode(BOOL10) ;
					root_0 = (Node)adaptor.becomeRoot(BOOL10_tree, root_0);
					}

					}
					break;

			}

			IDENTIFIER11=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declaration934); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			IDENTIFIER11_tree = new IdentifierNode(IDENTIFIER11) ;
			adaptor.addChild(root_0, IDENTIFIER11_tree);
			}

			pushFollow(FOLLOW_declaration_extention_in_declaration939);
			declaration_extention12=declaration_extention();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration_extention12.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Node)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class declaration_extention_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "declaration_extention"
	// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:102:1: declaration_extention : ( COMMA ^ IDENTIFIER declaration_extention )? ;
	public final NootParser.declaration_extention_return declaration_extention() throws RecognitionException {
		NootParser.declaration_extention_return retval = new NootParser.declaration_extention_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token COMMA13=null;
		Token IDENTIFIER14=null;
		ParserRuleReturnScope declaration_extention15 =null;

		Node COMMA13_tree=null;
		Node IDENTIFIER14_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:103:5: ( ( COMMA ^ IDENTIFIER declaration_extention )? )
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:103:9: ( COMMA ^ IDENTIFIER declaration_extention )?
			{
			root_0 = (Node)adaptor.nil();


			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:103:9: ( COMMA ^ IDENTIFIER declaration_extention )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==COMMA) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:103:10: COMMA ^ IDENTIFIER declaration_extention
					{
					COMMA13=(Token)match(input,COMMA,FOLLOW_COMMA_in_declaration_extention963); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					COMMA13_tree = new DeclarationNode(COMMA13) ;
					root_0 = (Node)adaptor.becomeRoot(COMMA13_tree, root_0);
					}

					IDENTIFIER14=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declaration_extention969); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					IDENTIFIER14_tree = new IdentifierNode(IDENTIFIER14) ;
					adaptor.addChild(root_0, IDENTIFIER14_tree);
					}

					pushFollow(FOLLOW_declaration_extention_in_declaration_extention974);
					declaration_extention15=declaration_extention();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration_extention15.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Node)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration_extention"


	public static class assignment_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "assignment"
	// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:106:1: assignment : IDENTIFIER BECOMES ^ assignment_extention ;
	public final NootParser.assignment_return assignment() throws RecognitionException {
		NootParser.assignment_return retval = new NootParser.assignment_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token IDENTIFIER16=null;
		Token BECOMES17=null;
		ParserRuleReturnScope assignment_extention18 =null;

		Node IDENTIFIER16_tree=null;
		Node BECOMES17_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:107:5: ( IDENTIFIER BECOMES ^ assignment_extention )
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:107:9: IDENTIFIER BECOMES ^ assignment_extention
			{
			root_0 = (Node)adaptor.nil();


			IDENTIFIER16=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_assignment995); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			IDENTIFIER16_tree = new IdentifierNode(IDENTIFIER16) ;
			adaptor.addChild(root_0, IDENTIFIER16_tree);
			}

			BECOMES17=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_assignment1000); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			BECOMES17_tree = new TypeAdoptedNode(BECOMES17) ;
			root_0 = (Node)adaptor.becomeRoot(BECOMES17_tree, root_0);
			}

			pushFollow(FOLLOW_assignment_extention_in_assignment1006);
			assignment_extention18=assignment_extention();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment_extention18.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Node)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment"


	public static class assignment_extention_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "assignment_extention"
	// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:110:1: assignment_extention : ( ( IDENTIFIER BECOMES )=> IDENTIFIER BECOMES ^ assignment_extention | expression );
	public final NootParser.assignment_extention_return assignment_extention() throws RecognitionException {
		NootParser.assignment_extention_return retval = new NootParser.assignment_extention_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token IDENTIFIER19=null;
		Token BECOMES20=null;
		ParserRuleReturnScope assignment_extention21 =null;
		ParserRuleReturnScope expression22 =null;

		Node IDENTIFIER19_tree=null;
		Node BECOMES20_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:111:5: ( ( IDENTIFIER BECOMES )=> IDENTIFIER BECOMES ^ assignment_extention | expression )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==IDENTIFIER) ) {
				int LA5_1 = input.LA(2);
				if ( (synpred1_Noot()) ) {
					alt5=1;
				}
				else if ( (true) ) {
					alt5=2;
				}

			}
			else if ( (LA5_0==CHARACTER||LA5_0==FALSE||LA5_0==IF||LA5_0==LCURLY||(LA5_0 >= LPAREN && LA5_0 <= MINUS)||LA5_0==NEGATION||LA5_0==NUMBER||LA5_0==PRINT||LA5_0==READ||LA5_0==TRUE||LA5_0==WHILE) ) {
				alt5=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:111:8: ( IDENTIFIER BECOMES )=> IDENTIFIER BECOMES ^ assignment_extention
					{
					root_0 = (Node)adaptor.nil();


					IDENTIFIER19=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_assignment_extention1036); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					IDENTIFIER19_tree = new IdentifierNode(IDENTIFIER19) ;
					adaptor.addChild(root_0, IDENTIFIER19_tree);
					}

					BECOMES20=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_assignment_extention1041); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					BECOMES20_tree = new TypeAdoptedNode(BECOMES20) ;
					root_0 = (Node)adaptor.becomeRoot(BECOMES20_tree, root_0);
					}

					pushFollow(FOLLOW_assignment_extention_in_assignment_extention1047);
					assignment_extention21=assignment_extention();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment_extention21.getTree());

					}
					break;
				case 2 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:112:8: expression
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_expression_in_assignment_extention1056);
					expression22=expression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, expression22.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Node)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment_extention"


	public static class expression_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:115:1: expression : ( ( IDENTIFIER BECOMES )=> assignment | while_statement | expression_level6 );
	public final NootParser.expression_return expression() throws RecognitionException {
		NootParser.expression_return retval = new NootParser.expression_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		ParserRuleReturnScope assignment23 =null;
		ParserRuleReturnScope while_statement24 =null;
		ParserRuleReturnScope expression_level625 =null;


		try {
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:116:5: ( ( IDENTIFIER BECOMES )=> assignment | while_statement | expression_level6 )
			int alt6=3;
			switch ( input.LA(1) ) {
			case IDENTIFIER:
				{
				int LA6_1 = input.LA(2);
				if ( (synpred2_Noot()) ) {
					alt6=1;
				}
				else if ( (true) ) {
					alt6=3;
				}

				}
				break;
			case WHILE:
				{
				alt6=2;
				}
				break;
			case CHARACTER:
			case FALSE:
			case IF:
			case LCURLY:
			case LPAREN:
			case MINUS:
			case NEGATION:
			case NUMBER:
			case PRINT:
			case READ:
			case TRUE:
				{
				alt6=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:116:9: ( IDENTIFIER BECOMES )=> assignment
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_assignment_in_expression1087);
					assignment23=assignment();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment23.getTree());

					}
					break;
				case 2 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:117:9: while_statement
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_while_statement_in_expression1097);
					while_statement24=while_statement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, while_statement24.getTree());

					}
					break;
				case 3 :
					// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:118:9: expression_level6
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_expression_level6_in_expression1107);
					expression_level625=expression_level6();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, expression_level625.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Node)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class while_statement_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "while_statement"
	// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:121:1: while_statement : WHILE ^ expression DO ! expression OD !;
	public final NootParser.while_statement_return while_statement() throws RecognitionException {
		NootParser.while_statement_return retval = new NootParser.while_statement_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token WHILE26=null;
		Token DO28=null;
		Token OD30=null;
		ParserRuleReturnScope expression27 =null;
		ParserRuleReturnScope expression29 =null;

		Node WHILE26_tree=null;
		Node DO28_tree=null;
		Node OD30_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:122:5: ( WHILE ^ expression DO ! expression OD !)
			// /Users/Thijs/Development/noot/src/noot/compiler/Noot.g:122:9: WHILE ^ expression DO ! expression OD !
			{
			root_0 = (Node)adaptor.nil();


			WHILE26=(Token)match(input,WHILE,FOLLOW_WHILE_in_while_statement1130); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			WHILE26_tree = (Node)adaptor.create(WHILE26);
			root_0 = (Node)adaptor.becomeRoot(WHILE26_tree, root_0);
			}

			pushFollow(FOLLOW_expression_in_while_statement1133);
			expression27=expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expression27.getTree());

			DO28=(Token)match(input,DO,FOLLOW_DO_in_while_statement1135); if (state.failed) return retval;
			pushFollow(FOLLOW_expression_in_while_statement1138);
			expression29=expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expression29.getTree());

			OD30=(Token)match(input,OD,FOLLOW_OD_in_while_statement1140); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Node)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "while_statement"


	public static class expression_level6_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};

